# srcman

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  devenv.nix
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
doc/: sync-git.lua
graphql/: graphql-query.gql
src/: args.rs  conf.rs  dirs.rs  gh.rs  git.rs  github.rs  gitlab.rs  main.rs  repo.rs
src/gh/: data.rs
src/github/: client.rs
