[package]
name = "gh-multi"
version = "0.1.0"
edition = "2021"
description = "A cli tool to manage several repositories at once"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.29"
reqwest = { version = "0.11.13", features = [ "blocking" ] }
serde = { version = "1.0.149", features = [ "derive" ] }
serde_json = "1.0.89"
