[package]
name = "srcman"
version = "0.1.0"
edition = "2021"
description = "A cli tool to manage several repositories at once"

[dependencies]
clap =  { version = "4.0.29", features = [ "derive" ] }
reqwest = { version = "0.12.12", features = [ "blocking" ] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.8.19"
git2 = "0.20.0"